--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "apptemplate",
-  "version": "0.3.4",
-  "description": "App template, by Pierre Keda.",
+  "name": "202111-gpgpu-demo",
+  "version": "0.1.0",
+  "description": "Simple GPGPU demo, by Pierre Keda.",
   "author": "Pierre Keda",
   "license": "MIT",
   "dependencies": {
