--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "202111-gpgpu-demo",
-  "version": "0.6.5",
-  "description": "Simple GPGPU demo, by Pierre Keda.",
+  "name": "holoblob",
+  "version": "0.7.0",
+  "description": "It's blobby.",
   "author": "Pierre Keda",
   "license": "MIT",
   "dependencies": {
